[workspace]
members = [
    "qhull-sys",
]

[package]
name = "qhull"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Rust bindings to Qhull"
readme = "README.md"

[workspace.package]
edition = "2021"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/LucaCiucci/qhull-rs"
keywords = ["qhull", "geometry", "convex-hull", "delaunay", "voronoi"]
exclude = [
    "/qhull-sys",
]
include = [
    "/src/",
    "/examples/",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qhull-sys = { version = "0.1.0", path = "qhull-sys" }
