[package]
name = "qhull-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Rust bindings to Qhull"
readme = "README.md"
exclude = [
    "/qhull",
]
include = [
    "/qhull/src/libqhull_r/*",
    "/qhull/COPYING.txt",
    "qhull/src/qconvex/qconvex_r.c",
    "qhull/src/qdelaunay/qdelaun_r.c",
    "qhull/src/qhalf/qhalf_r.c",
    "qhull/src/qhull/unix_r.c",
    "qhull/src/qvoronoi/qvoronoi_r.c",
    "qhull/src/rbox/rbox_r.c",
    "/src/",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[features]
default = []
all-headers = []
include-programs = []